--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,10 @@
 <resources>
 
     <string name="app_name">GCM_Client</string>
+    <string name="app_name2">배달의정의</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="action_settings">Settings</string>
     
     <string name="server_name">Choose Server</string>
     <string name="udid">Edit UDID</string>
